# cake

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RUNBOOK-LTX2.md  build-ios.sh  compare_vae.py  compare_wav.py  debug_ltx2.py  debug_ltx2_pipeline.py  docker-compose.yml  install-dev.sh  luxtts_test2.json  luxtts_test2.tsv  setup-windows-worker.ps1  topology-0.8B-1.yml  topology-0.8B-2-2-20.yml  topology-0.8B-bahamut-only.yml  topology-0.8B.yml  topology-ltx2.yml  topology-ltx23.yml  topology-luxtts.yml  topology-wan14b.yml
cake-cli/: Cargo.toml
cake-cli/src/: chat.rs  main.rs
cake-core/: Cargo.toml  build.rs
cake-core/benches/: bench_attention.rs  bench_auth.rs  bench_backend_ops.rs  bench_blocks.rs  bench_cache.rs  bench_discovery.rs  bench_expert_provider.rs  bench_flash_moe.rs  bench_flux.rs  bench_helpers.rs  bench_linear_attn.rs  bench_luxtts.rs  bench_mlp.rs  bench_moe.rs  bench_protocol.rs  bench_quantization.rs  bench_serialization.rs  bench_topology.rs  bench_utils.rs  bench_vibevoice.rs  bench_vulkan.rs  bench_wav.rs  benchmarks.rs
cake-core/src/: lib.rs
cake-core/src/backends/: cpu.rs  cuda.rs  f8_dequant.rs  fused_ops.rs  metal.rs  mod.rs  vulkan.rs
cake-core/src/backends/cpu/: mod.rs
cake-core/src/backends/cuda/: mod.rs  ops.cu  ops.rs
cake-core/src/backends/metal/: mod.rs  ops.msl
cake-core/src/backends/ops/: activations.rs  convolution.rs  cuda_kernels.rs  elementwise.rs  f8_dequant.rs  metal_shaders.rs  mod.rs  normalization.rs
cake-core/src/backends/rocm/: ffi.rs  mod.rs
cake-core/src/backends/vulkan/: mod.rs  ops.wgsl
cake-core/src/cake/: auth.rs  client.rs  discovery.rs  master.rs  mod.rs  setup.rs  topology.rs  worker.rs
cake-core/src/cake/api/: audio.rs  image.rs  index.html  integration_tests.rs  mod.rs  test_helpers.rs  text.rs  ui.rs  video.rs
cake-core/src/cake/proto/: message.rs  mod.rs
cake-core/src/cake/sharding/: auth.rs  client.rs  default.rs  discovery.rs  master.rs  mod.rs  topology.rs  worker.rs
cake-core/src/cuda/: fused_ops.cu
cake-core/src/model/: attention.rs  cache.rs  config.rs  llama.rs  mlp.rs  mod.rs  transformer.rs
cake-core/src/models/: chat.rs  mod.rs  speculative.rs
cake-core/src/models/common/: attention.rs  cache.rs  chatml_history.rs  config.rs  disk_expert_provider.rs  expert_provider.rs  mlp.rs  mod.rs  text_model.rs  transformer.rs
cake-core/src/models/exaone4/: block.rs  config.rs  mod.rs  model.rs
cake-core/src/models/falcon3/: config.rs  mod.rs  model.rs
cake-core/src/models/flux/: clip.rs  clip_encoder.rs  config.rs  flux.rs  flux1.rs  flux1_model.rs  flux2_model.rs  flux2_vae.rs  flux_shardable.rs  mod.rs  t5.rs  t5_encoder.rs  text_encoder.rs  transformer.rs  vae.rs
cake-core/src/models/gemma3/: block.rs  config.rs  history.rs  mod.rs  model.rs
cake-core/src/models/hunyuan_video/: clip.rs  clip_encoder.rs  hunyuan_shardable.rs  hunyuan_video.rs  hunyuan_video_shardable.rs  mod.rs  t5.rs  t5_encoder.rs  transformer.rs  vae_forwarder.rs
cake-core/src/models/llama3/: attention.rs  cache.rs  config.rs  history.rs  llama.rs  mod.rs  transformer.rs
cake-core/src/models/llava/: config.rs  llava.rs  llava_shardable.rs  mod.rs  vision.rs
cake-core/src/models/ltx2/: gemma.rs  gemma_encoder.rs  ltx2.rs  ltx2_shardable.rs  mod.rs  quantized_gemma.rs  transformer.rs  vae_forwarder.rs  vocoder.rs
cake-core/src/models/ltx_video/: ltx_video.rs  ltx_video_shardable.rs  mod.rs  t5.rs  transformer.rs  vae_forwarder.rs
cake-core/src/models/luxtts/: activations.rs  bias_norm.rs  block.rs  bypass_module.rs  config.rs  convolution_module.rs  euler_solver.rs  feedforward.rs  mel.rs  mod.rs  model.rs  nonlin_attention.rs  rel_pos_attention.rs  text_encoder.rs  tokenizer.rs  vocos.rs  zipformer_layer.rs
cake-core/src/models/mistral/: config.rs  mod.rs  model.rs
cake-core/src/models/mixtral/: block.rs  config.rs  expert_forwarder.rs  mixtral.rs  mixtral_shardable.rs  mod.rs  model.rs  moe_block.rs
cake-core/src/models/olmo2/: block.rs  config.rs  mod.rs  model.rs
cake-core/src/models/phi4/: config.rs  history.rs  mod.rs  model.rs
cake-core/src/models/qwen2/: config.rs  history.rs  mod.rs  qwen.rs
cake-core/src/models/qwen3/: config.rs  mod.rs  model.rs
cake-core/src/models/qwen3_5/: block.rs  config.rs  full_attention.rs  linear_attention.rs  mod.rs  model.rs
cake-core/src/models/qwen3_5_moe/: block.rs  config.rs  mod.rs  model.rs  moe.rs
cake-core/src/models/qwen3_moe/: block.rs  config.rs  mod.rs  model.rs  moe.rs
cake-core/src/models/sd/: clip.rs  mod.rs  safe_scheduler.rs  sd.rs  sd15_example.rs  sd_shardable.rs  unet.rs  util.rs  vae.rs
cake-core/src/models/sd15/: mod.rs  sd15.rs
cake-core/src/models/vibevoice/: acoustic_connector.rs  config.rs  config_1_5b.rs  ddpm.rs  eos_classifier.rs  mod.rs  prediction_head.rs  vae_decoder.rs  vae_encoder.rs  vibevoice.rs  vibevoice_1_5b.rs  voice_prompt.rs
cake-core/src/models/wan/: mod.rs  quantized_transformer.rs  t5_encoder.rs  transformer.rs  vae_forwarder.rs  (+2 more)
cake-core/src/utils/: f8_cuda.rs  flash_attn.rs  fp8.rs  fused_ops.rs  gguf.rs  gptq.rs  hf.rs  mlx_quant.rs  mod.rs  models.rs  native_dtype_backend.rs  quantized_linear.rs  split.rs  tensor_storage.rs  token_output_stream.rs  wav.rs
cake-core/src/video/: avi.rs  mod.rs
cake-core/tests/: integration.rs  protocol.rs  test_luxtts_audio.rs  unit.rs  wan_conv3d_compare.rs  wan_forward_compare.rs  wan_vae_compare.rs
cake-core/tests/unit_tests/: helpers.rs  test_attention.rs  test_backend_ops.rs  test_backends.rs  test_blocks.rs  test_cache.rs  test_client_worker.rs  test_config_parsing.rs  test_expert_provider.rs  test_flash_moe.rs  test_flux.rs  test_gguf.rs  test_hf.rs  test_luxtts.rs  test_mlp.rs  test_models_list.rs  test_moe.rs  test_quantization.rs  test_tensor_storage.rs  test_topology.rs  test_transformer.rs  test_transformer_standalone.rs
cake-ios/: Cargo.toml
cake-ios/src/: lib.rs
cake-split-model/: Cargo.toml
cake-split-model/src/: main.rs
flux-tests/: Cargo.toml
flux-tests/src/: main.rs
(+190 files in other folders)
