[package]
name = "llama3-cake"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
bitcode = { version = "0.6.0", features = ["serde"] }

clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.3"
human_bytes = "0.4.3"
log = "0.4.22"
memory-stats = "1.2.0"
safetensors = "0.4.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
tokenizers = { version = "0.19.1", features = ["onig"] }
tokio = { version = "1.38.0", features = ["full"] }

# use Metal accelleration on macOS and iOS.
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.6.0", features = ["metal", "accelerate"] }
candle-nn = { version = "0.6.0", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.6.0", features = ["metal", "accelerate"] }

[target.'cfg(target_os = "ios")'.dependencies]
candle-core = { version = "0.6.0", features = ["metal"] }
candle-nn = { version = "0.6.0", features = ["metal"] }
candle-transformers = { version = "0.6.0", features = ["metal"] }

# use CUDA on everything else.
[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies]
candle-core = { version = "0.6.0", features = ["cuda"] }
candle-nn = { version = "0.6.0", features = ["cuda"] }
candle-transformers = { version = "0.6.0", features = ["cuda"] }
