[package]
name = "cake-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cake"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
cake-core = { path = "../cake-core" }
clap = "4.5.8"
env_logger = "0.11.3"
tokio = { version = "1.38.0", features = ["full"] }

[features]
default = ["master", "llama", "qwen2"]
llama = ["cake-core/llama"]
qwen2 = ["cake-core/qwen2"]
cuda = ["cake-core/cuda"]
metal = ["cake-core/metal"]
master = ["cake-core/master"]
