[package]
name = "cake-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true

[[bin]]
name = "cake"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
cake-core.workspace = true
clap = "4.5.8"
crossterm = "0.28"
dirs = "5"
env_logger = "0.11.3"
futures = "0.3"
human_bytes = "0.4.3"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38.0", features = ["full"] }

[features]
default = ["master", "llama", "qwen2", "qwen3_5", "qwen3", "qwen3_moe", "phi4", "mistral", "gemma3", "falcon3", "olmo2", "exaone4"]
llama = ["cake-core/llama"]
qwen2 = ["cake-core/qwen2"]
qwen3_5 = ["cake-core/qwen3_5"]
qwen3 = ["cake-core/qwen3"]
qwen3_moe = ["cake-core/qwen3_moe"]
phi4 = ["cake-core/phi4"]
mistral = ["cake-core/mistral"]
gemma3 = ["cake-core/gemma3"]
falcon3 = ["cake-core/falcon3"]
olmo2 = ["cake-core/olmo2"]
exaone4 = ["cake-core/exaone4"]
cuda = ["cake-core/cuda"]
metal = ["cake-core/metal"]
master = ["cake-core/master"]
