[package]
name = "cake-core"
version.workspace = true
edition.workspace = true
autobenches = false
description.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"

clap = { version = "4.5.8", features = ["derive", "env"] }
human_bytes = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.22"
memmap2 = "0.9.4"
memory-stats = "1.2.0"
rayon = "1.10"
regex = "1.10.5"
safetensors = "0.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
speedy = "0.8.7"
tokenizers = { version = "0.21", features = ["onig"] }
tokio = { version = "1.38.0", features = ["full"] }
yoke = { version = "0.7.4", features = ["derive"] }

actix-web = { version = "4.8.0", optional = true }
async-stream = { version = "0.3", optional = true }
uuid = { version = "1.10.0", optional = true, features = ["v4"] }

candle-core = { version = "0.9" }
candle-nn = { version = "0.9" }
candle-transformers = { version = "0.9" }
candle-flash-attn = { version = "0.9", optional = true }
image = "0.25.2"
hf-hub = "0.5"
libc = "0.2"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
dirs = "5"
hex = "0.4"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
base64 = "0.22.1"

[features]
default = ["master", "llama", "qwen2", "qwen3_5", "qwen3", "qwen3_moe", "qwen3_5_moe", "phi4", "mistral", "gemma3", "falcon3", "olmo2", "exaone4"]

metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:candle-flash-attn"]

master = ["dep:actix-web", "dep:async-stream", "dep:uuid"]

llama = []
qwen2 = []
qwen3_5 = []
qwen3 = []
qwen3_moe = []
qwen3_5_moe = []
phi4 = []
mistral = []
gemma3 = []
falcon3 = []
olmo2 = []
exaone4 = []

[dev-dependencies]
tempfile = "3"
divan = "0.1"

[[bench]]
name = "benchmarks"
harness = false
