[package]
name = "cake-core"
version.workspace = true
edition.workspace = true
autobenches = false
description.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"

clap = { version = "4.5.8", features = ["derive", "env"] }
human_bytes = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.22"
memmap2 = "0.9.4"
memory-stats = "1.2.0"
rayon = "1.10"
regex = "1.10.5"
safetensors = "0.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
speedy = "0.8.7"
tokenizers = { version = "0.21", features = ["onig"] }
tokio = { version = "1.38.0", features = ["full"] }
yoke = { version = "0.7.4", features = ["derive"] }

actix-web = { version = "4.8.0", optional = true }
async-stream = { version = "0.3", optional = true }
uuid = { version = "1.10.0", optional = true, features = ["v4"] }

candle-core = { version = "0.9" }
candle-nn = { version = "0.9" }
candle-transformers = { version = "0.9" }
candle-flash-attn = { version = "0.9", optional = true }
candle-metal-kernels = { version = "0.9", optional = true }
objc2-metal = { version = "0.3", optional = true }
wgpu = { version = "24", optional = true }
rocm-rs = { version = "0.5", optional = true, default-features = false }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", optional = true, features = ["derive"] }
half = "2"
image = "0.25.2"
hf-hub = "0.5"
libc = "0.2"
sha2 = "0.10"
hmac = "0.12"
num-traits = "0.2"
rand = "0.8"
rustfft = { version = "6", optional = true }
dirs = "5"
hex = "0.4"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
zstd = "0.13"
crc32fast = "1"
base64 = "0.22.1"

[features]
default = ["master", "llama", "qwen2", "qwen3_5", "qwen3", "qwen3_moe", "qwen3_5_moe", "phi4", "mistral", "gemma3", "falcon3", "olmo2", "exaone4", "flux", "vibevoice", "luxtts"]

metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal", "dep:candle-metal-kernels", "dep:objc2-metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:bindgen_cuda"]
flash-attn = ["cuda", "dep:candle-flash-attn"]
vulkan = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
rocm = ["dep:rocm-rs"]

master = ["dep:actix-web", "dep:async-stream", "dep:uuid"]

llama = []
qwen2 = []
qwen3_5 = []
qwen3 = []
qwen3_moe = []
qwen3_5_moe = []
phi4 = []
mistral = []
gemma3 = []
falcon3 = []
olmo2 = []
exaone4 = []
flux = []
vibevoice = []
luxtts = ["dep:rustfft"]

[build-dependencies]
bindgen_cuda = { version = "0.1.6", optional = true }

[dev-dependencies]
tempfile = "3"
divan = "0.1"

# Build OpenSSL from source when cross-compiling tests for Android (no system OpenSSL available)
[target.'cfg(target_os = "android")'.dev-dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[[bench]]
name = "benchmarks"
harness = false
