[package]
name = "cake-ios"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib", "staticlib"]
name = "cake"

[dependencies]
anyhow = "1.0.86"
uniffi = { version = "0.28.0", features = ["cli", "tokio"] }
env_logger = "0.11.3"
log = "0.4.22"
tokio = "1.38.0"

# we don't need master code here
cake-core = { path = "../cake-core", default-features = false }
