[package]
name = "cake-ios"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "cake"

[dependencies]
anyhow = "1.0.86"
uniffi = { version = "0.28.0", features = ["cli", "tokio"] }
env_logger = "0.11.3"
log = "0.4.22"
tokio = "1.38.0"
libc = "0.2"

# we don't need master code here
cake-core = { path = "../cake-core", default-features = false, features = ["llama", "qwen2", "qwen3_5"] }

[features]
default = ["llama", "qwen2", "qwen3_5"]
llama = ["cake-core/llama"]
qwen2 = ["cake-core/qwen2"]
qwen3_5 = ["cake-core/qwen3_5"]
metal = ["cake-core/metal"]
