[package]
name = "cake-split-model"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
safetensors = "0.4.3"
cake-core = { path = "../cake-core" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
memmap2 = "0.9.4"
candle-core = "0.6.0"
candle-nn = "0.6.0"
anyhow = "1.0.86"
serde_yaml = "0.9.34"
