[package]
name = "flux-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
cake-core = { path = "../cake-core", features = ["flux", "cuda"] }
candle-core = { version = "0.9", features = ["cuda"] }
candle-nn = { version = "0.9", features = ["cuda"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
env_logger = "0.11"
log = "0.4"
